# kalshi-gas

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SUBMISSION.md  config.example.crps.yaml  config.weights.crps.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: freeze.yaml
data/sample/: aaa_daily.csv  eia_weekly.csv  kalshi_markets.csv  nhc_outlook.csv  rbob_futures.csv  wpsr_summary.csv
data_proc/: summary.json
data_raw/: aaa_override.csv  eia_weekly.csv  kalshi_bins.yml  nhc_flag.yml  wpsr_state.yml
docs/: METHODOLOGY.md  REFERENCES.md  RUNBOOK.md  usage.md
reports/: memo.md
scripts/: bootstrap_last_good.py  calibrate_prior_weight.py  check_freshness.py  cli.py  estimate_residual_sigma.py  fetch_rbob_chris.py  freeze_eia_html.py  freeze_wpsr_html.py  live_check.py  log_manual_label.py  log_prompt.py  rbob_fetch_chris.py  simulate_market_data.py  update_kalshi_bins.py  update_nhc_flag.py  update_rbob_csv.py  update_wpsr_state.py
src/kalshi_gas/: __init__.py  cli.py  config.py
tests/: test_aaa_parse.py  test_asymmetry_ci.py  test_backtest_metrics.py  test_eia_weekly.py  test_freeze_t1.py  test_metrics.py  test_nowcast_bounds.py  test_nowcast_sim.py  test_pipeline.py  test_pipeline_smoke.py  test_posterior_prob.py  test_posterior_summary.py  test_prior_isotonic.py  test_prior_weight_sweep.py  test_rbob_csv.py  test_structural_map.py  test_wpsr_gate_html_precedence.py  test_wpsr_parse.py  tests_prior_gate.py
tests/fixtures/: aaa_national_v1.html  aaa_national_v2.html  eia_weekly_series.html  wpsr_summary.html
(+38 files in other folders)
